[package]
name = "bevy_starter"
description = "A place to start your bevy project from including sound and video options"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edgarhsanchez/bevy_starter"
documentation = "https://docs.rs/bevy_starter"
authors = ["edgarhsanchez"]
categories = ["games", "command-line-interface"]
keywords = ["cli", "ratatui", "terminal", "tui", "bevy"]

[dependencies]
anyhow = "1.0.95"
bevy = { version = "0.15", default-features = false }
bevy_ratatui = "0.7.0"
bitflags = "2.6.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
rat-cursor = "1.1.0"
rat-event = "1.1.0"
rat-focus = "0.30.1"
rat-ftable = "0.29.1"
rat-reloc = "1.0.0"
rat-scrolled = "1.0.0"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
rayon = "1.10.0"
# bevy_input has not been updated to smol_str 0.3 yet
smol_str = "0.3.2"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3

[dev-dependencies]
rand = "0.8.5"
bevy = { version = "0.15", default-features = false, features = [
    "bevy_state",
] }
